fix: align header with design AB#16361

--- a/interfaces/HO-Portal/src/app/components/banner/banner.component.scss
+++ b/interfaces/HO-Portal/src/app/components/banner/banner.component.scss
@@ -1,6 +1,3 @@
 .banner {
   background-color: var(--ion-color-tertiary);
 }
-.border-top {
-  border-top: 1px solid var(--ion-color-primary);
-}
